Corrected a little overflow with divs in studyMode

--- a/ClientApp/styles/studyMode.css
+++ b/ClientApp/styles/studyMode.css
@@ -18,3 +18,8 @@
     right: 10px;
 }
 
+.botonCol,
+.botonAni,
+.botonNum {
+    width: fit-content;
+}
